# videocad.github.io

./: .env.example  .gitignore  README.md  pyproject.toml  videocad_onshape.example.toml
runpod_worker/: Dockerfile  README.md  handler.py  requirements.txt
src/videocad_onshape/: __init__.py  action_codec.py  artifacts.py  cad_ir.py  calibration.py  cli.py  compat.py  config.py  controller.py  errors.py  inference.py  native.py  onshape.py  planner.py  renderer.py  runtime.py  videocad.py
tests/: test_action_codec.py  test_cli.py  test_config.py  test_planner.py  test_renderer.py  test_runpod_predictor.py
